# sociomemory

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
sociomemory/: __init__.py  config.py
sociomemory/dashboard/: __init__.py  api.py  dev.sh  export.py  server.py
sociomemory/dashboard/web/: index.html  package-lock.json  package.json  vercel.json  vite.config.js
sociomemory/dashboard/web/public/: 404.html
sociomemory/dashboard/web/src/: main.jsx  styles.css
sociomemory/data/: amenity_categories.json  cultural_regions.json  india_cities.json  india_real_estate.json  school_boards.json
sociomemory/engine/: behavioral.py  episodes.py  income.py  scorer.py  temporal.py  tradeoff.py  versioning.py
sociomemory/graph/: builder.py  cypher.py  edges.py  memory_graph.py  nodes.py  reasoner.py  schema.py
sociomemory/llm/: base.py  factory.py  gemini.py  local.py  openai.py  openrouter.py
sociomemory/models/: coaching.py  profile.py  signals.py
sociomemory/pipeline/: enricher.py  extractor.py  implicator.py  ner.py
sociomemory/privacy/: anonymizer.py  api.py  boundaries.py  consent.py
sociomemory/providers/: base.py  exa.py  factory.py  geocode.py  offline.py  place.py
sociomemory/storage/: __init__.py  cache.py  graph_backend.py  keyword.py  neo4j_backend.py  paths.py  vector.py
sociomemory/tests/: test_behavioral.py  test_extractor.py  test_income.py  test_memory_graph.py
tests/: test_behavioral.py  test_configuration.py  test_cypher_queries.py  test_dashboard_api.py  test_dashboard_export.py  test_episode_segmenter.py  test_extractor.py  test_geocode.py  test_income.py  test_keyword_index.py  test_memory_graph.py  test_neo4j_backend.py  test_ner.py  test_openrouter_llm.py  test_privacy.py
