[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sociomemory"
version = "0.1.0"
description = "Graph memory engine for social context inference — built for VIRa AI Coach (proprietary, patent pending)"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "NirvanaAIsutra Pvt. Ltd.", email = "licensing@nirvanaaisutra.com" }]
maintainers = [{ name = "Piyush Aryan", email = "piyush.aryan@nirvanaaisutra.com" }]
keywords = ["memory", "graph", "neo4j", "faiss", "ai", "coaching", "ndd"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Other Audience",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "neo4j>=5.0.0",
    "faiss-cpu>=1.7.4",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "google-genai>=1.0.0",
    "openai>=1.0.0",
    "numpy>=1.24.0",
    "aiofiles>=23.0.0",
]

[project.scripts]
sociomemory-dashboard = "sociomemory.dashboard.server:main"

[project.optional-dependencies]
online = [
    "exa-py>=1.0.0",
]
geo = [
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
    "s2sphere>=0.2.5",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "testcontainers[neo4j]>=4.0.0",
    "ruff>=0.4.0",
]
all = ["sociomemory[geo]"]

[project.urls]
Homepage = "https://nirvanaaisutra.com"
Licensing = "mailto:licensing@nirvanaaisutra.com"

[tool.hatch.build.targets.wheel]
packages = ["sociomemory"]
exclude = ["sociomemory/tests", "sociomemory/**/__pycache__"]

[tool.hatch.build.targets.sdist]
exclude = [".venv", ".pytest_cache", ".ruff_cache", "dist", "build", "*.egg-info", "arch.png", ".DS_Store"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "sociomemory/tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
