[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sociomemory"
version = "0.1.0"
description = "Graph memory engine for social context inference"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Piyush Aryan" }]
maintainers = [{ name = "Piyush Aryan" }]
keywords = ["memory", "graph", "neo4j", "faiss", "ai", "coaching", "ndd"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "neo4j>=5.0.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "bm25s>=0.3.9",
]

[project.optional-dependencies]
vector = ["faiss-cpu>=1.7.4"]
gemini = ["google-genai>=1.0.0"]
openai = ["openai>=1.0.0"]
openrouter = ["openai>=1.0.0"]
local = ["httpx>=0.27.0"]
online = [
    "exa-py>=1.0.0",
]
geo = [
    "geopandas>=0.14.0",
    "h3>=4.5.0",
    "shapely>=2.0.0",
]
dev = [
    "build>=1.2.0",
    "hatchling>=1.27.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "testcontainers[neo4j]>=4.0.0",
    "ruff>=0.4.0",
]
all = [
    "exa-py>=1.0.0",
    "faiss-cpu>=1.7.4",
    "geopandas>=0.14.0",
    "google-genai>=1.0.0",
    "h3>=4.5.0",
    "httpx>=0.27.0",
    "openai>=1.0.0",
    "shapely>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/piyusharyan/sociomemory"
Repository = "https://github.com/piyusharyan/sociomemory"

[tool.hatch.build.targets.wheel]
packages = ["sociomemory"]
exclude = ["sociomemory/tests", "sociomemory/dashboard", "sociomemory/**/__pycache__"]

[tool.hatch.build.targets.sdist]
exclude = [".venv", ".pytest_cache", ".ruff_cache", "dist", "build", "*.egg-info", "arch.png", ".DS_Store"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires an external service such as Neo4j",
    "network: performs network requests",
]
addopts = "--strict-markers"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.coverage.run]
branch = true
source = ["sociomemory"]
omit = [
    "sociomemory/dashboard/*",
    "sociomemory/llm/gemini.py",
    "sociomemory/llm/local.py",
    "sociomemory/llm/openai.py",
    "sociomemory/providers/exa.py",
    "sociomemory/providers/place.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = ["^sociomemory/dashboard/"]
